--- a/index.html
+++ b/index.html
@@ -3,38 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time Tracker</title>
-    <script>
-        async function enviarDatos() {
-            let datos = {
-                Codigo: document.getElementById("codigo").value,
-                Actividad: document.getElementById("actividad").value,
-                Comentario: document.getElementById("comentario").value,
-                HoraInicio: document.getElementById("horaInicio").value,
-                HoraFin: document.getElementById("horaFin").value
-            };
-
-            let response = await fetch("https://script.google.com/macros/s/AKfycbxw1bE-inSy5Mc_flh0yohdg1HytwRnr5kE2VCvoii_-3EcSzxwzKEcpUZwJlrdr69H/exec", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(datos)
-            });
-
-            let resultado = await response.json();
-            alert(resultado.message);
+    <title>Registro de Datos</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-    </script>
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            text-align: center;
+        }
+        input, button {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        .mensaje {
+            margin-top: 10px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <h2>Registrar Actividad</h2>
-    <form onsubmit="event.preventDefault(); enviarDatos();">
-        Código: <input type="text" id="codigo" required><br><br>
-        Actividad: <input type="text" id="actividad" required><br><br>
-        Comentario: <input type="text" id="comentario"><br><br>
-        Hora Inicio: <input type="time" id="horaInicio" required><br><br>
-        Hora Fin: <input type="time" id="horaFin"><br><br>
-        <button type="submit">Enviar</button>
+
+<div class="container">
+    <h2>Registro de Datos</h2>
+    <form id="registroForm">
+        <input type="text" id="dniRuc" placeholder="DNI o RUC" required>
+        <input type="text" id="nombreLocal" placeholder="Nombre del Local" required>
+        <input type="text" id="nombreRazonSocial" placeholder="Nombre/Razón Social" required>
+        <input type="text" id="mainGroup" placeholder="MainGroup" required>
+        <input type="date" id="fecha" required>
+        <input type="time" id="hora" required>
+        <button type="button" onclick="enviarDatos()">Registrar</button>
     </form>
+    <p class="mensaje" id="mensaje"></p>
+</div>
+
+<script>
+    // Autocompletar fecha y hora actual
+    document.getElementById('fecha').valueAsDate = new Date();
+    document.getElementById('hora').value = new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
+
+    function enviarDatos() {
+        const dniRuc = document.getElementById("dniRuc").value.trim();
+        const nombreLocal = document.getElementById("nombreLocal").value.trim();
+        const nombreRazonSocial = document.getElementById("nombreRazonSocial").value.trim();
+        const mainGroup = document.getElementById("mainGroup").value.trim();
+        const fecha = document.getElementById("fecha").value;
+        const hora = document.getElementById("hora").value;
+
+        if (!dniRuc || !nombreLocal || !nombreRazonSocial || !mainGroup || !fecha || !hora) {
+            document.getElementById("mensaje").innerText = "⚠️ Todos los campos son obligatorios.";
+            return;
+        }
+
+        const url = "https://script.google.com/macros/s/AKfycbyW0r-hE5OWHjqJKhMEkfMfW0AGTb9Jgmh039HhkoNeNwkv6tdL26orq42jBJzeuNtiug/exec";
+        const datos = new URLSearchParams({
+            dniRuc,
+            nombreLocal,
+            nombreRazonSocial,
+            mainGroup,
+            fecha,
+            hora
+        });
+
+        fetch(url, {
+            method: "POST",
+            body: datos
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.result === "success") {
+                document.getElementById("mensaje").innerText = "✅ Registro exitoso.";
+                document.getElementById("registroForm").reset();
+                document.getElementById('fecha').valueAsDate = new Date();
+                document.getElementById('hora').value = new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
+            } else {
+                document.getElementById("mensaje").innerText = "❌ Error al registrar.";
+            }
+        })
+        .catch(error => {
+            console.error("Error:", error);
+            document.getElementById("mensaje").innerText = "❌ Error de conexión.";
+        });
+    }
+</script>
+
 </body>
 </html>
-
